// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`blank request 1`] = `
<div>
  <div
    className="sh sh--y"
  >
    <h2
      className="sh-title"
    >
      Cosmic Incursion
    </h2>
  </div>
  <div
    className="g g--top"
  >
    <div
      className="g--7 m-v500"
    >
      <textarea
        className={
          Object {
            "data-css-1gh870p": "",
          }
        }
        defaultValue=""
        name="description"
        onBlur={[Function]}
        onInput={[Function]}
        placeholder="How can we help?"
      />
    </div>
    <div
      className="g--5 m-v500"
    >
      <div
        className="br br-a200"
      >
        <div
          className="css-19ub58"
          onClick={[Function]}
          onDragEnter={[Function]}
          onDragLeave={[Function]}
          onDragOver={[Function]}
          onDragStart={[Function]}
          onDrop={[Function]}
          style={Object {}}
        >
          <img
            alt=""
            height="324"
            src="/static/img/image-upload.png"
            style={
              Object {
                "display": "block",
                "height": "auto",
                "width": "100%",
              }
            }
            width="479"
          />
          <input
            accept="image/*"
            multiple={false}
            onChange={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
            type="file"
          />
        </div>
        <div
          className="br br-t200"
          style={
            Object {
              "position": "relative",
            }
          }
        >
          <a
            className="btn btn--w btn--b"
            href="javascript:void(0)"
            onClick={[Function]}
            style={
              Object {
                "visibility": "visible",
              }
            }
          >
            Upload Photo
          </a>
        </div>
      </div>
    </div>
  </div>
  <div
    className="g m-v500 css-1k8tu3j"
  >
    <div
      className="g--9 t--info"
      style={
        Object {
          "textAlign": "right",
        }
      }
    />
    <button
      className="btn g--3"
      disabled={false}
      onClick={[Function]}
    >
      Next
    </button>
  </div>
</div>
`;

exports[`existing description 1`] = `
<div>
  <div
    className="sh sh--y"
  >
    <h2
      className="sh-title"
    >
      Cosmic Incursion
    </h2>
  </div>
  <div
    className="g g--top"
  >
    <div
      className="g--7 m-v500"
    >
      <textarea
        className={
          Object {
            "data-css-1i2zjxt": "",
          }
        }
        defaultValue="Please pick up my bulk items. "
        name="description"
        onBlur={[Function]}
        onInput={[Function]}
        placeholder="How can we help?"
      />
    </div>
    <div
      className="g--5 m-v500"
    >
      <div
        className="br br-a200"
      >
        <div
          className="css-19ub58"
          onClick={[Function]}
          onDragEnter={[Function]}
          onDragLeave={[Function]}
          onDragOver={[Function]}
          onDragStart={[Function]}
          onDrop={[Function]}
          style={Object {}}
        >
          <img
            alt=""
            height="324"
            src="/static/img/image-upload.png"
            style={
              Object {
                "display": "block",
                "height": "auto",
                "width": "100%",
              }
            }
            width="479"
          />
          <input
            accept="image/*"
            multiple={false}
            onChange={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
            type="file"
          />
        </div>
        <div
          className="br br-t200"
          style={
            Object {
              "position": "relative",
            }
          }
        >
          <a
            className="btn btn--w btn--b"
            href="javascript:void(0)"
            onClick={[Function]}
            style={
              Object {
                "visibility": "visible",
              }
            }
          >
            Upload Photo
          </a>
        </div>
      </div>
    </div>
  </div>
  <div
    className="g m-v500 css-1k8tu3j"
  >
    <div
      className="g--9 t--info"
      style={
        Object {
          "textAlign": "right",
        }
      }
    />
    <button
      className="btn g--3"
      disabled={false}
      onClick={[Function]}
    >
      Next
    </button>
  </div>
</div>
`;

exports[`service with metadata 1`] = `
<div>
  <div
    className="sh sh--y"
  >
    <h2
      className="sh-title"
    >
      Cosmic Incursion
    </h2>
  </div>
  <div
    className="g g--top"
  >
    <div
      className="g--7 m-v500"
    >
      <textarea
        className={
          Object {
            "data-css-1gh870p": "",
          }
        }
        defaultValue=""
        name="description"
        onBlur={[Function]}
        onInput={[Function]}
        placeholder="How can we help?"
      />
      <div>
        <label
          className="txt"
        >
          <span
            className="txt-l"
          >
            Please provide any other relevant information:
             
          </span>
          <textarea
            className="txt-f"
            name="ST-CMTS"
            onChange={[Function]}
            rows="5"
            value=""
          />
        </label>
      </div>
    </div>
    <div
      className="g--5 m-v500"
    >
      <div
        className="br br-a200"
      >
        <div
          className="css-19ub58"
          onClick={[Function]}
          onDragEnter={[Function]}
          onDragLeave={[Function]}
          onDragOver={[Function]}
          onDragStart={[Function]}
          onDrop={[Function]}
          style={Object {}}
        >
          <img
            alt=""
            height="324"
            src="/static/img/image-upload.png"
            style={
              Object {
                "display": "block",
                "height": "auto",
                "width": "100%",
              }
            }
            width="479"
          />
          <input
            accept="image/*"
            multiple={false}
            onChange={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
            type="file"
          />
        </div>
        <div
          className="br br-t200"
          style={
            Object {
              "position": "relative",
            }
          }
        >
          <a
            className="btn btn--w btn--b"
            href="javascript:void(0)"
            onClick={[Function]}
            style={
              Object {
                "visibility": "visible",
              }
            }
          >
            Upload Photo
          </a>
        </div>
      </div>
    </div>
  </div>
  <div
    className="g m-v500 css-1k8tu3j"
  >
    <div
      className="g--9 t--info"
      style={
        Object {
          "textAlign": "right",
        }
      }
    />
    <button
      className="btn g--3"
      disabled={false}
      onClick={[Function]}
    >
      Next
    </button>
  </div>
</div>
`;
